// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flawTrackers > Correctly renders the component when there are not trackers to display 1`] = `
"<div data-v-7006d35c="">
  <div data-v-7006d35c="" class="affects-trackers">
    <div data-v-7006d35c="" class="bg-dark rounded-top-2 text-info">
      <div data-v-7006d35c="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-7006d35c="" class="m-0">Trackers</h5>
      </div>
      <!--v-if-->
      <div data-v-7006d35c="" class="trackers-toolbar p-2 pt-1">
        <div data-v-7006d35c="" class="tracker-badges">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div><button data-v-7006d35c="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-7006d35c="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
      </div>
    </div>
    <div data-v-7006d35c="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-7006d35c="" class="table table-striped table-info mb-0">
        <thead data-v-7006d35c="" class="sticky-top">
          <tr data-v-7006d35c="">
            <th data-v-7006d35c="">Bug ID</th>
            <th data-v-7006d35c="">Module</th>
            <th data-v-7006d35c="">Product Stream</th>
            <th data-v-7006d35c=""><span data-v-7006d35c="" class="align-bottom me-1">Status</span><button data-v-7006d35c="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-7006d35c="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-7006d35c="" class="dropdown-menu" aria-labelledby="status-filter"></ul>
            </th>
            <th data-v-7006d35c="">Resolution</th>
            <th data-v-7006d35c=""> Created date <i data-v-7006d35c="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-7006d35c=""> Updated date <i data-v-7006d35c="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-7006d35c=""></tbody>
      </table>
      <div data-v-7006d35c=""> No trackers to display </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`flawTrackers > Correctly renders the component when there are trackers to display 1`] = `
"<div data-v-7006d35c="">
  <div data-v-7006d35c="" class="affects-trackers">
    <div data-v-7006d35c="" class="bg-dark rounded-top-2 text-info">
      <div data-v-7006d35c="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-7006d35c="" class="m-0">Trackers</h5>
      </div>
      <!--v-if-->
      <div data-v-7006d35c="" class="trackers-toolbar p-2 pt-1">
        <div data-v-7006d35c="" class="tracker-badges">
          <div data-v-7006d35c="" class="per-page-btn btn btn-sm badge"><i data-v-7006d35c="" style="pointer-events: auto;" class="bi bi-dash-square fs-6 my-auto" title="Reduce trackers per page"></i><span data-v-7006d35c="" class="mx-2 my-auto">Per page: 10</span><i data-v-7006d35c="" style="pointer-events: auto;" class="bi bi-plus-square fs-6 my-auto" title="Increase trackers per page"></i></div>
          <!--v-if-->
          <div data-v-7006d35c="" class="badge" title="Trackers displayed in current page"><span data-v-7006d35c="">Displaying 6</span></div>
        </div><button data-v-7006d35c="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-7006d35c="" class="bi bi-binoculars"></i> Show Trackers Manager </button>
      </div>
    </div>
    <div data-v-7006d35c="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-7006d35c="" class="table table-striped table-info mb-0">
        <thead data-v-7006d35c="" class="sticky-top">
          <tr data-v-7006d35c="">
            <th data-v-7006d35c="">Bug ID</th>
            <th data-v-7006d35c="">Module</th>
            <th data-v-7006d35c="">Product Stream</th>
            <th data-v-7006d35c=""><span data-v-7006d35c="" class="align-bottom me-1">Status</span><button data-v-7006d35c="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-7006d35c="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-7006d35c="" class="dropdown-menu" aria-labelledby="status-filter">
                <li data-v-7006d35c=""><a data-v-7006d35c="" href="#" class="btn py-0 dropdown-item"><input data-v-7006d35c="" type="checkbox" class="form-check-input me-2"><span data-v-7006d35c="">NEW</span></a></li>
                <li data-v-7006d35c=""><a data-v-7006d35c="" href="#" class="btn py-0 dropdown-item"><input data-v-7006d35c="" type="checkbox" class="form-check-input me-2"><span data-v-7006d35c="">CLOSED</span></a></li>
              </ul>
            </th>
            <th data-v-7006d35c="">Resolution</th>
            <th data-v-7006d35c=""> Created date <i data-v-7006d35c="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-7006d35c=""> Updated date <i data-v-7006d35c="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-7006d35c="">
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0006 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-5">openshift-5</td>
            <td data-v-7006d35c="" title="xxxx-0-006">xxxx-0-006</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0006" target="_blank">XXXX-0006 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-5</td>
            <td data-v-7006d35c="">xxxx-0-006</td>
            <td data-v-7006d35c="">CLOSED</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-07-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-07-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0005 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-5">openshift-5</td>
            <td data-v-7006d35c="" title="xxxx-0-005">xxxx-0-005</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0005" target="_blank">XXXX-0005 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-5</td>
            <td data-v-7006d35c="">xxxx-0-005</td>
            <td data-v-7006d35c="">NEW</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-08-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-08-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0004 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
            <td data-v-7006d35c="" title="xxxx-0-004">xxxx-0-004</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0004" target="_blank">XXXX-0004 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-1</td>
            <td data-v-7006d35c="">xxxx-0-004</td>
            <td data-v-7006d35c="">CLOSED</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-09-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-09-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0003 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
            <td data-v-7006d35c="" title="xxxx-0-003">xxxx-0-003</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0003" target="_blank">XXXX-0003 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-1</td>
            <td data-v-7006d35c="">xxxx-0-003</td>
            <td data-v-7006d35c="">NEW</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-10-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-10-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0002 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
            <td data-v-7006d35c="" title="xxxx-0-002">xxxx-0-002</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0002" target="_blank">XXXX-0002 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-1</td>
            <td data-v-7006d35c="">xxxx-0-002</td>
            <td data-v-7006d35c="">CLOSED</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-11-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-11-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0001 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
            <td data-v-7006d35c="" title="xxxx-0-001">xxxx-0-001</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0001" target="_blank">XXXX-0001 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-1</td>
            <td data-v-7006d35c="">xxxx-0-001</td>
            <td data-v-7006d35c="">NEW</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-12-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-12-01 13:06 UTC</td>
          </tr>
        </tbody>
      </table>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`flawTrackers > Displays embedded trackers manager 1`] = `
"<div data-v-7006d35c="">
  <div data-v-7006d35c="" class="affects-trackers">
    <div data-v-7006d35c="" class="bg-dark rounded-top-2 text-info">
      <div data-v-7006d35c="" class="affect-trackers-heading d-flex p-1 pt-2 px-3">
        <h5 data-v-7006d35c="" class="m-0">Trackers</h5>
      </div>
      <!--v-if-->
      <div data-v-7006d35c="" class="trackers-toolbar p-2 pt-1">
        <div data-v-7006d35c="" class="tracker-badges">
          <div data-v-7006d35c="" class="per-page-btn btn btn-sm badge"><i data-v-7006d35c="" style="pointer-events: auto;" class="bi bi-dash-square fs-6 my-auto" title="Reduce trackers per page"></i><span data-v-7006d35c="" class="mx-2 my-auto">Per page: 10</span><i data-v-7006d35c="" style="pointer-events: auto;" class="bi bi-plus-square fs-6 my-auto" title="Increase trackers per page"></i></div>
          <!--v-if-->
          <div data-v-7006d35c="" class="badge" title="Trackers displayed in current page"><span data-v-7006d35c="">Displaying 6</span></div>
        </div><button data-v-7006d35c="" type="button" class="btn btn-sm btn-info ms-auto"><i data-v-7006d35c="" class="bi bi-eye-slash-fill"></i> Hide Trackers Manager </button>
      </div>
    </div>
    <div data-v-7006d35c="" class="osim-tracker-card pb-2 pt-0 pe-2 ps-2 bg-dark">
      <table data-v-7006d35c="" class="table table-striped table-info mb-0">
        <thead data-v-7006d35c="" class="sticky-top">
          <tr data-v-7006d35c="">
            <th data-v-7006d35c="">Bug ID</th>
            <th data-v-7006d35c="">Module</th>
            <th data-v-7006d35c="">Product Stream</th>
            <th data-v-7006d35c=""><span data-v-7006d35c="" class="align-bottom me-1">Status</span><button data-v-7006d35c="" id="status-filter" type="button" class="btn btn-sm border-0 p-0" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><i data-v-7006d35c="" class="bi bi-funnel" title=""></i></button>
              <ul data-v-7006d35c="" class="dropdown-menu" aria-labelledby="status-filter">
                <li data-v-7006d35c=""><a data-v-7006d35c="" href="#" class="btn py-0 dropdown-item"><input data-v-7006d35c="" type="checkbox" class="form-check-input me-2"><span data-v-7006d35c="">NEW</span></a></li>
                <li data-v-7006d35c=""><a data-v-7006d35c="" href="#" class="btn py-0 dropdown-item"><input data-v-7006d35c="" type="checkbox" class="form-check-input me-2"><span data-v-7006d35c="">CLOSED</span></a></li>
              </ul>
            </th>
            <th data-v-7006d35c="">Resolution</th>
            <th data-v-7006d35c=""> Created date <i data-v-7006d35c="" class="bi-caret-up-fill bi"></i></th>
            <th data-v-7006d35c=""> Updated date <i data-v-7006d35c="" class="opacity-0 bi-caret-up-fill bi"></i></th>
          </tr>
        </thead>
        <tbody data-v-7006d35c="">
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0006 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-5">openshift-5</td>
            <td data-v-7006d35c="" title="xxxx-0-006">xxxx-0-006</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0006" target="_blank">XXXX-0006 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-5</td>
            <td data-v-7006d35c="">xxxx-0-006</td>
            <td data-v-7006d35c="">CLOSED</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-07-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-07-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0005 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-5">openshift-5</td>
            <td data-v-7006d35c="" title="xxxx-0-005">xxxx-0-005</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0005" target="_blank">XXXX-0005 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-5</td>
            <td data-v-7006d35c="">xxxx-0-005</td>
            <td data-v-7006d35c="">NEW</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-08-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-08-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0004 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
            <td data-v-7006d35c="" title="xxxx-0-004">xxxx-0-004</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0004" target="_blank">XXXX-0004 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-1</td>
            <td data-v-7006d35c="">xxxx-0-004</td>
            <td data-v-7006d35c="">CLOSED</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-09-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-09-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0003 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
            <td data-v-7006d35c="" title="xxxx-0-003">xxxx-0-003</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0003" target="_blank">XXXX-0003 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-1</td>
            <td data-v-7006d35c="">xxxx-0-003</td>
            <td data-v-7006d35c="">NEW</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-10-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-10-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0002 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
            <td data-v-7006d35c="" title="xxxx-0-002">xxxx-0-002</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0002" target="_blank">XXXX-0002 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-1</td>
            <td data-v-7006d35c="">xxxx-0-002</td>
            <td data-v-7006d35c="">CLOSED</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-11-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-11-01 13:06 UTC</td>
          </tr>
          <tr data-v-7006d35c="">
            <td data-v-7006d35c=""><a data-v-7006d35c="" target="_blank">XXXX-0001 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="" title="openshift-1">openshift-1</td>
            <td data-v-7006d35c="" title="xxxx-0-001">xxxx-0-001</td>
            <td data-v-7006d35c=""><a data-v-7006d35c="" href="http://jira-service:8002/browse/XXXX-0001" target="_blank">XXXX-0001 <i data-v-7006d35c="" class="bi-box-arrow-up-right"></i></a></td>
            <td data-v-7006d35c="">openshift-1</td>
            <td data-v-7006d35c="">xxxx-0-001</td>
            <td data-v-7006d35c="">NEW</td>
            <td data-v-7006d35c=""></td>
            <td data-v-7006d35c="">2024-12-01 13:05 UTC</td>
            <td data-v-7006d35c="">2024-12-01 13:06 UTC</td>
          </tr>
        </tbody>
      </table>
      <!--v-if-->
    </div>
  </div>
  <div data-v-4977998e="" data-v-7006d35c="" class="trackers-manager py-3 px-4 embedded">
    <h4 data-v-4977998e="" class="mb-2 d-flex"> Trackers Manager </h4>
    <div data-v-4977998e="" class="trackers-search-bar gap-2"><input data-v-4977998e="" type="text" class="form-control form-control-sm" placeholder="Filter by stream or component name"><button data-v-4977998e="" type="button" class="btn btn-sm btn-black"><i data-v-4977998e="" class="bi bi-check-all"></i> Select All </button><button data-v-4977998e="" type="button" class="btn btn-sm btn-black"><i data-v-4977998e="" class="bi bi-x-square"></i> Deselect All </button></div>
    <div class="row mt-3" data-v-4977998e="">
      <div class="col" data-v-4977998e="">
        <h5 class="d-inline-block fs-5" data-v-4977998e="">Available Trackers</h5><span class="fst-italic" data-v-4977998e=""> (<i class="bi bi-box-arrow-in-right" data-v-4977998e=""></i> indicates a Suggested Tracker) </span>
      </div>
      <div class="col" data-v-4977998e="">
        <h6 class="fs-5" data-v-4977998e="">Selected To File</h6>
      </div>
    </div>
    <div data-v-4977998e="" class="row">
      <div data-v-4977998e="" class="col">
        <div data-v-4977998e="" class="mb-2">
          <!--v-if-->
          <div data-v-4977998e="" class="osim-tracker-list"></div>
        </div>
      </div>
      <div data-v-4977998e="" class="col">
        <div data-v-4977998e="" class="mb-2">
          <!--v-if-->
          <div data-v-4977998e="" class="osim-tracker-list"></div>
        </div>
      </div>
    </div>
    <div data-v-4977998e="" class="row mt-4">
      <div data-v-4977998e="" class="col mb-2">
        <h5 data-v-4977998e="">Already Filed</h5>
        <!--v-if-->
        <div data-v-4977998e="" class="osim-tracker-list"></div>
      </div>
      <div data-v-4977998e="" class="col">
        <div data-v-4977998e="">
          <h5 data-v-4977998e="">Untrackable Affects <i data-v-4977998e="" class="bi bi-exclamation-circle text-danger" title="These affects do not have available trackers. This may indicate an issue with product defintions. Please contact the OSIDB/OSIM team for assistance."></i></h5>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div><button data-v-4977998e="" type="button" class="btn btn-sm btn-black osim-file-trackers mt-4" disabled=""><i data-v-4977998e="" class="bi bi-archive"></i> File Selected Trackers </button>
  </div>
</div>"
`;
